captured .sqlite Db from Mobile app

--- a/eSMSSync/appsettings.json
+++ b/eSMSSync/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    // Connection string for the eWealthTracker database.
+    "EwealthConnectionString": "Data Source=VEER;Initial Catalog=eWealthTracker;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=viral;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
