--- a/eSMSSync/eSMSSync.csproj
+++ b/eSMSSync/eSMSSync.csproj
@@ -7,12 +7,45 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="9.0.0" />
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Common.DBHelper">
+      <HintPath>..\..\..\..\..\..\Work\Project\eWealth\src\BuildingBlocks\Common.DBHelper\bin\Debug\net8.0\Common.DBHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.Result">
+      <HintPath>..\..\..\..\..\..\Work\Project\eWealth\src\BuildingBlocks\Common.DBHelper\bin\Debug\net8.0\Common.Result.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.User.Access">
+      <HintPath>..\..\..\..\..\..\Work\Project\eWealth\src\BuildingBlocks\Common.DBHelper\bin\Debug\net8.0\Common.User.Access.dll</HintPath>
+    </Reference>
+    <Reference Include="DBHelper">
+      <HintPath>..\..\..\..\..\..\Work\Project\eWealth\src\BuildingBlocks\Common.DBHelper\bin\Debug\net8.0\DBHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="Enums">
+      <HintPath>..\..\..\..\..\..\Work\Project\eWealth\src\BuildingBlocks\Common.DBHelper\bin\Debug\net8.0\Enums.dll</HintPath>
+    </Reference>
+    <Reference Include="Exceptions">
+      <HintPath>..\..\..\..\..\..\Work\Project\eWealth\src\BuildingBlocks\Common.DBHelper\bin\Debug\net8.0\Exceptions.dll</HintPath>
+    </Reference>
+    <Reference Include="Utils">
+      <HintPath>..\..\..\..\..\..\Work\Project\eWealth\src\BuildingBlocks\Utils\bin\Debug\net8.0\Utils.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Logs\" />
   </ItemGroup>
 
 </Project>
